Added my own gpu script

--- a/Desktop/.config/i3/i3blocks2.conf
+++ b/Desktop/.config/i3/i3blocks2.conf
@@ -39,21 +39,9 @@ interval=3
 
 [separator]
 
-[gpu_load]
-command=nvidia-settings -q GPUUtilization -t | awk -F '=|,' '{print $2"%"}'
-label=︁ 
-instance=load
-interval=3
-
-[gpu_temp]
-command=nvidia-settings -q GPUCoreTemp -t | awk '{print $1"°C"}'
-#command=$SCRIPT_DIR/gpu -f {temp}
-interval=3
-
-[vram]
-command=nvidia-settings -q GPUUtilization -t | awk -F '=|,' '{print $4"%"}'
-label=︁ 
-instance=vram
+[gpu]
+command=$SCRIPT_DIR/gpu -f '︁ {load} {temp} ︁ {vram}' -lwarn 75 -lcrit 90 -twarn 65 -tcrit 72
+markup=pango
 interval=3
 
 [separator]
