Apply gray color to all blocks & change interval of clock on second monitor to refresh every second

--- a/Desktop/.config/i3/i3blocks1.conf
+++ b/Desktop/.config/i3/i3blocks1.conf
@@ -23,6 +23,7 @@ interval=1
 [weather]
 command=$SCRIPT_DIR/weather
 instance=2808720
+color=#a9a9a9
 interval=300
 
 [separator]
@@ -39,6 +40,7 @@ interval=5
 [packages]
 command=$SCRIPT_DIR/packages
 label= 
+color=#a9a9a9
 interval=300
 
 [separator]
@@ -46,6 +48,7 @@ interval=300
 [audio]
 command=$SCRIPT_DIR/audio
 label= 
+color=#a9a9a9
 interval=1
 
 [separator]
