--- a/Desktop/.config/i3/i3blocks2.conf
+++ b/Desktop/.config/i3/i3blocks2.conf
@@ -14,6 +14,7 @@ separator_block_width=7
 [uptime]
 command=uptime -p
 label=↻︁ 
+color=#a9a9a9
 interval=30
 
 [separator]
@@ -21,6 +22,7 @@ interval=30
 [cpu_usage]
 command=$SCRIPT_DIR/cpu_usage
 label=︁ 
+color=#a9a9a9
 interval=3
 T_WARN=50
 T_CRIT=80
@@ -28,6 +30,7 @@ DECIMALS=2
 
 [cpu_temp]
 command=$SCRIPT_DIR/cpu_temp
+color=#a9a9a9
 interval=3
 
 [separator]
@@ -35,6 +38,7 @@ interval=3
 [memory]
 command=$SCRIPT_DIR/memory
 label=︁ 
+color=#a9a9a9
 interval=3
 
 [separator]
@@ -42,10 +46,11 @@ interval=3
 [gpu]
 command=$SCRIPT_DIR/gpu -f '︁ {load} {temp} ︁ {vram}' -lwarn 75 -lcrit 90 -twarn 65 -tcrit 72
 markup=pango
+color=#a9a9a9
 interval=3
 
 [separator]
 
 [time]
 command=date '+%d.%m.%Y %H:%M:%S'
-interval=3
+interval=1
