Exchange packages with my own updates script

--- a/Desktop/.config/i3/i3blocks1.conf
+++ b/Desktop/.config/i3/i3blocks1.conf
@@ -37,8 +37,8 @@ interval=5
 
 [separator]
 
-[packages]
-command=$SCRIPT_DIR/packages
+[updates]
+command=$SCRIPT_DIR/updates
 label= 
 color=#a9a9a9
 interval=300
