Exchange audio with my own volume script

--- a/Desktop/.config/i3/i3blocks1.conf
+++ b/Desktop/.config/i3/i3blocks1.conf
@@ -45,8 +45,8 @@ interval=300
 
 [separator]
 
-[audio]
-command=$SCRIPT_DIR/audio
+[volume]
+command=$SCRIPT_DIR/volume
 label= 
 color=#a9a9a9
 interval=1
