Exchange cpu_usage & cpu_temp with my own cpu script

--- a/Desktop/.config/i3/i3blocks2.conf
+++ b/Desktop/.config/i3/i3blocks2.conf
@@ -19,17 +19,8 @@ interval=30
 
 [separator]
 
-[cpu_usage]
-command=$SCRIPT_DIR/cpu_usage
-label=︁ 
-color=#a9a9a9
-interval=3
-T_WARN=50
-T_CRIT=80
-DECIMALS=2
-
-[cpu_temp]
-command=$SCRIPT_DIR/cpu_temp
+[cpu]
+command=$SCRIPT_DIR/cpu -chip k10temp-pci-00c3 -f "︁ {load} {temp}"
 color=#a9a9a9
 interval=3
 
