New colors and new separator

--- a/Desktop/.config/i3/i3blocks1.conf
+++ b/Desktop/.config/i3/i3blocks1.conf
@@ -2,20 +2,18 @@
 # https://github.com/HerrEurobeat
 
 
-# Global properties
-separator=true
-separator_block_width=15
-
 # Define the custom separator
-full_text=|
+full_text=ᐸ
 align=center
 separator=false
 separator_block_width=7
+color=#a9a9a9
 
 [mediaplayer]
 command=$SCRIPT_DIR/mediaplayer
 label= 
 instance=spotify
+color=#ffffff
 interval=1
 
 [separator]
@@ -23,7 +21,7 @@ interval=1
 [weather]
 command=$SCRIPT_DIR/weather
 instance=2808720
-color=#a9a9a9
+color=#ffffff
 interval=300
 
 [separator]
@@ -40,7 +38,7 @@ interval=5
 [updates]
 command=$SCRIPT_DIR/updates
 label= 
-color=#a9a9a9
+color=#ffffff
 interval=300
 
 [separator]
@@ -48,11 +46,12 @@ interval=300
 [volume]
 command=$SCRIPT_DIR/volume
 label= 
-color=#a9a9a9
+color=#ffffff
 interval=1
 
 [separator]
 
 [time]
 command=date '+%d.%m.%Y %H:%M:%S'
+color=#ffffff
 interval=1
