--- a/Desktop/.config/i3/i3blocks2.conf
+++ b/Desktop/.config/i3/i3blocks2.conf
@@ -1,27 +1,25 @@
 # 3urobeat's i3blocks config for Monitor 2
 # https://github.com/HerrEurobeat
 
-# Global properties
-separator=true
-separator_block_width=15
 
 # Define the custom separator
-full_text=|
+full_text=ᐸ
 align=center
 separator=false
 separator_block_width=7
+color=#a9a9a9
 
 [uptime]
 command=uptime -p
 label=↻︁ 
-color=#a9a9a9
+color=#ffffff
 interval=30
 
 [separator]
 
 [cpu]
 command=$SCRIPT_DIR/cpu -chip k10temp-pci-00c3 -f "︁ {load} {temp}"
-color=#a9a9a9
+color=#ffffff
 interval=3
 
 [separator]
@@ -29,7 +27,7 @@ interval=3
 [memory]
 command=$SCRIPT_DIR/memory
 label=︁ 
-color=#a9a9a9
+color=#ffffff
 interval=3
 
 [separator]
@@ -37,11 +35,12 @@ interval=3
 [gpu]
 command=$SCRIPT_DIR/gpu -f '︁ {load} {temp} ︁ {vram}' -lwarn 75 -lcrit 90 -twarn 65 -tcrit 72
 markup=pango
-color=#a9a9a9
+color=#ffffff
 interval=3
 
 [separator]
 
 [time]
 command=date '+%d.%m.%Y %H:%M:%S'
+color=#ffffff
 interval=1
