--- a/Desktop/.config/i3/config
+++ b/Desktop/.config/i3/config
@@ -5,9 +5,12 @@
 # Set mod key to Tux (well Windows) Key
 set $mod Mod4
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:monospace 8
+# Hide i3 window titles but keep small border to indicate focused window
+font pango:DejaVu Sans Mono 0
+
+# Add just a little bit of gaps
+gaps inner 8
+gaps outer 0
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
@@ -39,7 +42,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # bind program launcher
-bindsym $mod+d exec dmenu_run -fn 'Futura:bold:pixelsize=12'
+bindsym $mod+d exec dmenu_run -fn 'Futura:bold:pixelsize=13' -nf '#F8F8F2' -nb '#282A36' -sf '#BD93F9' -sb '#44475A'
 #bindsym $mod+d exec rofi -show run
 
 # default keybinds for movement, focus, split and layout
@@ -189,13 +192,16 @@ client.background       #F8F8F2
 # Start two bars for each monitor in order to be able to display different blocks
 bar {
         output $mon1
+        tray_output none # only show tray output on second monitor
 
         font pango:Font Awesome, Futura Bk Bt Bold 11
 
         position top
-        separator_symbol " " # remove separator symbol to be able to set it directly in i3blocks config
 
-        status_command SCRIPT_DIR=~/.config/i3/i3blocks/ i3blocks -c ~/.config/i3/i3blocks1.conf
+	status_command /usr/bin/bumblebee-status \
+		-m spotify weather updates nic traffic pasink datetime \
+		-p weather.showcity=false traffic.showname=false nic.format='{ip}' datetime.format='%a %d.%m.%y %H:%M:%S' \
+		-t dracula-powerline
 
         colors {
             background #282A36
@@ -212,13 +218,16 @@ bar {
 
 bar {
         output $mon2
+        tray_output $mon2 # only show tray output on second monitor
 
         font pango:Font Awesome, Futura Bk Bt Bold 11
 
         position top
-        separator_symbol " "
 
-        status_command SCRIPT_DIR=~/.config/i3/i3blocks/ i3blocks -c ~/.config/i3/i3blocks2.conf
+	status_command /usr/bin/bumblebee-status \
+		-m uptimetext cpu3 memory gpu datetime \
+		-p cpu3.format="︁ {load} {temp}" cpu3.chip="k10temp-pci-00c3" memory.usedonly=true gpu.format="︁ {load} {temp} ︁ {vram}" datetime.format='%a %d.%m.%y %H:%M:%S' \
+		-t dracula-powerline
 
         colors {
             background #282A36
@@ -233,12 +242,8 @@ bar {
         }
 }
 
-
 # Bind i3lock to mod+shift+x and give it a black background color
 bindsym $mod+shift+x exec "/home/tomg/.config/i3/i3lock-fancy-multimonitor/lock -n -b=0x8"
-
-# Hide i3 window titles but keep small border to indicate focused window
-font pango:DejaVu Sans Mono 0
 
 # Disable tiling color border on the screen edge
 hide_edge_borders both
@@ -250,7 +255,7 @@ exec setxkbmap -layout de
 exec numlockx on
 
 # Load wallpaper (requires feh package)
-exec_always feh --bg-scale /home/tomg/Pictures/wallpaper.jpg
+exec_always --no-startup-id feh --bg-scale /home/tomg/.config/wallpaper.jpg
 
 # Bind flameshot to mod+print
 bindsym $mod+Print exec flameshot gui
@@ -265,4 +270,5 @@ exec --no-startup-id discord
 exec --no-startup-id steam
 exec --no-startup-id clipmenud
 exec --no-startup-id redshift
+exec --no-startup-id birdtray
 # exec --no-startup-id obs --startreplaybuffer
