Update VsCodium settings

--- a/Laptop/.config/VSCodium/User/settings.json
+++ b/Laptop/.config/VSCodium/User/settings.json
@@ -87,5 +87,6 @@
     "files.trimTrailingWhitespace": true,
     "[markdown]": {
         "files.trimTrailingWhitespace": false
-    }
+    },
+    "window.zoomLevel": -1
 }
