feat: Various Z13 adjustments

--- a/Z13/.config/hypr/hyprland.conf
+++ b/Z13/.config/hypr/hyprland.conf
@@ -1,5 +1,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,1920x1200@60,0x0,1
+monitor = eDP-1, 1920x1200@60, 0x0, 1
+monitor = DP-1, 2560x1440@60, 0x-1440, 1
 
 # Set env vars
 env = XCURSOR_SIZE,24
@@ -108,6 +109,12 @@ device {
     accel_profile = flat
 }
 
+device {
+    name = mx-vertical-mouse
+    sensitivity = 0.1
+    accel_profile = flat
+}
+
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
@@ -183,15 +190,17 @@ bind = , XF86MonBrightnessUp, exec, brightnessctl s 5%+
 bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 
 # Volume Binds
-bind = , XF86AudioRaiseVolume, exec, amixer -q set Master,0 2%+ unmute
-bind = , XF86AudioLowerVolume, exec, amixer -q set Master,0 2%- unmute
+bind = , XF86AudioRaiseVolume, exec, amixer -q set Master,0 5%+ unmute
+bind = , XF86AudioLowerVolume, exec, amixer -q set Master,0 5%- unmute
 bind = , XF86AudioMute, exec, amixer -q set Master,0 toggle
 bind = , XF86AudioMicMute, exec, amixer -q set Capture,0 toggle
 
 # Use playerctl to bind media control keys
-bind = , XF86AudioPlay, exec, playerctl play-pause # Toggle playback with one button
-bind = , XF86AudioNext, exec, playerctl next
-bind = , XF86AudioPrev, exec, playerctl previous
+#   My Thinkpad Z13 is stupid and has no media keys. Therefore, I enslaved the useless call accept/deny & favorite buttons.
+#   For normal people, use: XF86AudioPrev, XF86AudioPlay & XF86AudioNext
+bind = , XF86Go, exec, playerctl previous
+bind = , Cancel, exec, playerctl play-pause # Toggle playback with one button
+bind = , XF86Favorites, exec, playerctl next
 
 # Flameshot (needs flameshot-git and grim to be installed, at least as of 2024-05)
 bind = $mainMod, Print, exec, XDG_CURRENT_DESKTOP=Hyprland flameshot gui
