Z13: Add Nextcloud, fix waybar tray, fix LibreWolf PiP

--- a/Z13/.config/hypr/hyprland.conf
+++ b/Z13/.config/hypr/hyprland.conf
@@ -7,7 +7,8 @@ env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct
 
 # Exec things
-exec-once = /usr/lib/pam_kwallet_init & kwalletd6 & kded6 & /usr/lib/polkit-kde-authentication-agent-1
+exec-once = /usr/lib/pam_kwallet_init & kwalletd6 & kded6 & /usr/lib/polkit-kde-authentication-agent-1   # Start KWallet
+exec-once = /bin/bash -c 'while ! dbus-send --session --dest=org.freedesktop.DBus --type=method_call --print-reply /org/freedesktop/DBus org.freedesktop.DBus.ListNames | grep org.kde.StatusNotifierWatcher; do sleep 0.1; done'   # Fix for waybar tray not working
 exec-once = waybar
 exec-once = dunst
 exec-once = hypridle
@@ -122,11 +123,16 @@ device {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
-# Window Rules
+# Workspace Binds
 windowrulev2 = workspace 2, class:(LibreWolf), title:()
 windowrulev2 = workspace 3, class:(VSCodium), title:()
 windowrulev2 = workspace 9, class:(discord), title:()
 windowrulev2 = workspace 9, class:(Spotify), title:()
+
+# Fix Firefox Picture-in-Picture
+windowrulev2 = size 800 450, title:(Picture-in-Picture)
+windowrulev2 = pin, title:^(Picture-in-Picture)$
+windowrulev2 = float, title:(Picture-in-Picture)
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
