--- a/Z13/.config/qt6ct/qt6ct.conf
+++ b/Z13/.config/qt6ct/qt6ct.conf
@@ -2,7 +2,7 @@
 color_scheme_path=/usr/share/qt6ct/colors/darker.conf
 custom_palette=false
 icon_theme=breeze
-standard_dialogs=default
+standard_dialogs=kde
 style=Breeze
 
 [Fonts]
@@ -11,7 +11,7 @@ general="Noto Sans,10,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
 
 [Interface]
 activate_item_on_single_click=1
-buttonbox_layout=0
+buttonbox_layout=2
 cursor_flash_time=1000
 dialog_buttons_have_icons=1
 double_click_interval=400
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xb5\0\0\x2:\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x2\x44\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xb5\0\0\x2:)
+geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xb5\0\0\x2;\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x2\x44\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xb5\0\0\x2;)"
 
 [Troubleshooting]
 force_raster_widgets=1
