--- a/Z13/.config/waybar/config
+++ b/Z13/.config/waybar/config
@@ -8,7 +8,7 @@
       "tray"
     ],
     "modules-center": [
-      "hyprland/window",
+      "hyprland/window"
     ],
     "modules-right": [
       "network",
@@ -21,7 +21,7 @@
       "wireplumber"
     ],
     "tray": {
-      "icon-size": 24,
+      "icon-size": 16,
       "spacing": 10,
       "show-passive-items": true
     },
