Z13: Update configs & packages

--- a/Z13/.config/hypr/hyprland.conf
+++ b/Z13/.config/hypr/hyprland.conf
@@ -3,17 +3,20 @@ monitor = eDP-1, 1920x1200@60, 0x0, 1
 monitor = DP-1, 2560x1440@60, 0x-1440, 1
 
 # Set env vars
-env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct
+#env = HYPRCURSOR_THEME,breezex-dark
+#env = HYPRCURSOR_SIZE,24
+#env = XCURSOR_SIZE,24
 
 # Exec things
 exec-once = /usr/lib/pam_kwallet_init & kwalletd6 & kded6 & /usr/lib/polkit-kde-authentication-agent-1   # Start KWallet
 exec-once = /bin/bash -c 'while ! dbus-send --session --dest=org.freedesktop.DBus --type=method_call --print-reply /org/freedesktop/DBus org.freedesktop.DBus.ListNames | grep org.kde.StatusNotifierWatcher; do sleep 0.1; done'   # Fix for waybar tray not working
+exec-once = XDG_MENU_PREFIX=arch- kbuildsycoca6   # Stupid Dolphin Open With being empty fix
 exec-once = waybar
 exec-once = dunst
 exec-once = hypridle
 exec-once = wl-paste --watch cliphist store
-exec-once = nextcloud --background
+exec-once = nextcloud
 
 # Program vars
 $terminal = alacritty
@@ -116,6 +119,12 @@ device {
     accel_profile = flat
 }
 
+device {
+    name = logitech-mx-vertical-1
+    sensitivity = 0.1
+    accel_profile = flat
+}
+
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
@@ -140,7 +149,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, L, exec, loginctl lock-session
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, Z, exec, $clipboard
 bind = $mainMod, V, togglefloating,
@@ -195,18 +204,25 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = , XF86MonBrightnessUp, exec, brightnessctl s 5%+
 bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 
+
 # Volume Binds
 bind = , XF86AudioRaiseVolume, exec, amixer -q set Master,0 5%+ unmute
 bind = , XF86AudioLowerVolume, exec, amixer -q set Master,0 5%- unmute
 bind = , XF86AudioMute, exec, amixer -q set Master,0 toggle
 bind = , XF86AudioMicMute, exec, amixer -q set Capture,0 toggle
 
+
 # Use playerctl to bind media control keys
-#   My Thinkpad Z13 is stupid and has no media keys. Therefore, I enslaved the useless call accept/deny & favorite buttons.
-#   For normal people, use: XF86AudioPrev, XF86AudioPlay & XF86AudioNext
+#   My Thinkpad Z13 is stupid and has no media keys. Therefore, I enslaved the useless call accept/deny & favorite buttons:
 bind = , XF86Go, exec, playerctl previous
 bind = , Cancel, exec, playerctl play-pause # Toggle playback with one button
 bind = , XF86Favorites, exec, playerctl next
+
+#   For "normal" keyboards:
+bind = , XF86AudioPrev, exec, playerctl previous
+bind = , XF86AudioPlay, exec, playerctl play-pause # Toggle playback with one button
+bind = , XF86AudioNext, exec, playerctl next
+
 
 # Flameshot (needs flameshot-git and grim to be installed, at least as of 2024-05)
 bind = $mainMod, Print, exec, XDG_CURRENT_DESKTOP=Hyprland flameshot gui
