--- a/Z13/.config/qt6ct/qt6ct.conf
+++ b/Z13/.config/qt6ct/qt6ct.conf
@@ -2,7 +2,7 @@
 color_scheme_path=/usr/share/qt6ct/colors/darker.conf
 custom_palette=false
 icon_theme=breeze
-standard_dialogs=kde
+standard_dialogs=gtk3
 style=Breeze
 
 [Fonts]
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xb5\0\0\x2;\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x2\x44\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xb5\0\0\x2;)"
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\xff\xff\xfa`\0\0\x4\xf5\xff\xff\xff\xd0\0\0\0\0\xff\xff\xfa`\0\0\x4\xff\xff\xff\xff\xda\0\0\0\x1\x2\0\0\0\n\0\0\0\0\0\xff\xff\xfa`\0\0\x4\xf5\xff\xff\xff\xd0)
 
 [Troubleshooting]
 force_raster_widgets=1
