Z13: Add simple VPN waybar indicator and fix SSH & Bitwig focus issues

--- a/Z13/.config/hypr/hyprland.conf
+++ b/Z13/.config/hypr/hyprland.conf
@@ -1,6 +1,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1, 1920x1200@60, 0x0, 1
-monitor = DP-1, 2560x1440@60, 0x-1440, 1
+monitor = DP-1, 2560x1440@60, 0x-1440, 1	# Left Thunderbolt port
+monitor = DP-2, 2560x1440@60, 1920x0, 1		# Right Thunderbolt port
 
 # Set env vars
 env = QT_QPA_PLATFORMTHEME,qt6ct
@@ -89,7 +90,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    #new_is_master = true
 }
 
 # Three finger swipe on touchpad to switch workspaces
@@ -142,6 +143,9 @@ windowrulev2 = workspace 9, class:(Spotify), title:()
 windowrulev2 = size 800 450, title:(Picture-in-Picture)
 windowrulev2 = pin, title:^(Picture-in-Picture)$
 windowrulev2 = float, title:(Picture-in-Picture)
+
+# Fix issues when using dials in Bitwig
+windowrulev2=stayfocused,class:^(com.bitwig.BitwigStudio)
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
