Z13: Fix no wallpaper, fix Nextcloud starting before keychain unlock, fix Nextcloud closing on unhover, fix Bitwig focus issues and fix color issues in alacritty when running tmux

--- a/Z13/.config/hypr/hyprland.conf
+++ b/Z13/.config/hypr/hyprland.conf
@@ -13,11 +13,12 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 exec-once = /usr/lib/pam_kwallet_init & kwalletd6 & kded6 & /usr/lib/polkit-kde-authentication-agent-1   # Start KWallet
 exec-once = /bin/bash -c 'while ! dbus-send --session --dest=org.freedesktop.DBus --type=method_call --print-reply /org/freedesktop/DBus org.freedesktop.DBus.ListNames | grep org.kde.StatusNotifierWatcher; do sleep 0.1; done'   # Fix for waybar tray not working
 exec-once = XDG_MENU_PREFIX=arch- kbuildsycoca6   # Stupid Dolphin Open With being empty fix
+exec-once = hyprpaper
 exec-once = waybar
 exec-once = dunst
 exec-once = hypridle
 exec-once = wl-paste --watch cliphist store
-exec-once = nextcloud
+exec-once = /bin/bash -c 'sleep 2.5 ; nextcloud &'	# Wait 5 seconds before starting nextcloud in hopes that the waybar tray works by now (lol)
 
 # Program vars
 $terminal = alacritty
@@ -139,13 +140,17 @@ windowrulev2 = workspace 3, class:(VSCodium), title:()
 windowrulev2 = workspace 9, class:(discord), title:()
 windowrulev2 = workspace 9, class:(Spotify), title:()
 
+# Tell Nextcloud Client to appear in a floating window that does not close on unfocus
+windowrulev2 = float, title:(Nextcloud)
+windowrulev2 = stayfocused, title:(Nextcloud)
+
 # Fix Firefox Picture-in-Picture
 windowrulev2 = size 800 450, title:(Picture-in-Picture)
 windowrulev2 = pin, title:^(Picture-in-Picture)$
 windowrulev2 = float, title:(Picture-in-Picture)
 
 # Fix issues when using dials in Bitwig
-windowrulev2=stayfocused,class:^(com.bitwig.BitwigStudio)
+windowrulev2 = stayfocused, class:^(com.bitwig.BitwigStudio)
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
