--- a/Z13/.config/hypr/hyprland.conf
+++ b/Z13/.config/hypr/hyprland.conf
@@ -1,7 +1,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1, 1920x1200@60, 0x0, 1
 monitor = DP-1, 2560x1440@60, 0x-1440, 1	# Left Thunderbolt port
-monitor = DP-2, 2560x1440@60, 1920x0, 1		# Right Thunderbolt port
+# monitor = DP-2, 2560x1440@60, 1920x0, 1		# Right Thunderbolt port
 
 # Set env vars
 env = QT_QPA_PLATFORMTHEME,qt6ct
@@ -13,7 +13,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 exec-once = /usr/lib/pam_kwallet_init & kwalletd6 & kded6 & /usr/lib/polkit-kde-authentication-agent-1   # Start KWallet
 exec-once = /bin/bash -c 'while ! dbus-send --session --dest=org.freedesktop.DBus --type=method_call --print-reply /org/freedesktop/DBus org.freedesktop.DBus.ListNames | grep org.kde.StatusNotifierWatcher; do sleep 0.1; done'   # Fix for waybar tray not working
 exec-once = XDG_MENU_PREFIX=arch- kbuildsycoca6   # Stupid Dolphin Open With being empty fix
-exec-once = hyprpaper
+# exec-once = hyprpaper
 exec-once = waybar
 exec-once = dunst
 exec-once = hypridle
@@ -65,10 +65,10 @@ decoration {
         passes = 1
     }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    #drop_shadow = yes
+    #shadow_range = 4
+    #shadow_render_power = 3
+    #col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -150,7 +150,8 @@ windowrulev2 = pin, title:^(Picture-in-Picture)$
 windowrulev2 = float, title:(Picture-in-Picture)
 
 # Fix issues when using dials in Bitwig
-windowrulev2 = stayfocused, class:^(com.bitwig.BitwigStudio)
+#windowrulev2 = stayfocused, class:^(com.bitwig.BitwigStudio)
+windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
