--- a/Desktop/.config/tmux/tmux.conf
+++ b/Desktop/.config/tmux/tmux.conf
@@ -5,6 +5,12 @@ set -g mouse on
 set -g default-terminal "$TERM"
 set -ag terminal-overrides ",$TERM:Tc"
 
+# VIM panel switching consistency
+bind k selectp -U 
+bind j selectp -D
+bind h selectp -L
+bind l selectp -R 
+
 # Make window splitting actually sensible
 bind | split-window -h -c "#{pane_current_path}"
 bind _ split-window -v -c "#{pane_current_path}"
